Migrated to Angular 17, Map details fixed

--- a/Angular2024/angular.json
+++ b/Angular2024/angular.json
@@ -53,10 +53,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "Angular2024:build:production"
+              "buildTarget": "Angular2024:build:production"
             },
             "development": {
-              "browserTarget": "Angular2024:build:development"
+              "buildTarget": "Angular2024:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -64,7 +64,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Angular2024:build"
+            "buildTarget": "Angular2024:build"
           }
         },
         "test": {
