--- a/Angular2024/.github/workflows/firebase-deploy.yml
+++ b/Angular2024/.github/workflows/firebase-deploy.yml
@@ -24,6 +24,10 @@ jobs:
       - name: Build Angular project
         run: npm run build --prod
 
-      - name: Deploy to Firebase
-        run: firebase deploy --only hosting --token ${{ secrets.FIREBASE_TOKEN }}
+      - name: Deploy to Firebase Hosting
+      uses: w9jds/firebase-action@v2.2.0
+      with:
+        args: deploy --only hosting
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
