--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Build Angular project
-        run: npm run build -- --prod
+        run: npm run build 
 
       - name: Deploy to Firebase Hosting
         uses: w9jds/firebase-action@v2.2.0
@@ -31,6 +31,6 @@ jobs:
         env: 
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
-          
+
 
 
