--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -18,16 +18,11 @@ jobs:
         with:
           node-version: '20'
 
-      - name: Navigate to project directory
-        run: cd angular2024
-
       - name: Install dependencies
         run: npm install
-        working-directory: Angular2024
 
       - name: Build Angular project
-        run: npm run build 
-        working-directory: Angular2024
+        run: npm run build -- --configuration production
 
       - name: Deploy to Firebase Hosting
         uses: w9jds/firebase-action@v2.2.0
@@ -35,10 +30,3 @@ jobs:
           args: deploy --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        working-directory: Angular2024
-
-
-
-
-
-
