--- a/.github/workflows/firebase-deploy.yml
+++ b/.github/workflows/firebase-deploy.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build Angular project
         run: npm run build -- --configuration production
 
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools@latest
+
       - name: Deploy to Firebase Hosting
         uses: w9jds/firebase-action@v2.2.0
         with:
