--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/angular2024",
+    "public": "dis/angular2024",
     "ignore": [
       "firebase.json",
       "**/.*",
